# llvm_practice

./: CMakeLists.txt  build.cmd  build.py
script/linux/: build.sh  clean.sh
script/windows/: build.cmd
source/: practice.cc
